--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 <div class="container">
 <h3>Knowledge Base Page Example</h3>
-<p>The interactive table works as a Q&A prompt that, when finished, outputs a set of instructions to follow based on the answers provided.</p>
+<p>This knoweldge base page consists of an interactive table which works as a Q&A prompt that, when finished, outputs a set of instructions to follow based on the answers provided.</p>
 <p>The tax department of New Zealand uses thousands of pages just like this one to help answer customer queries based on the customer's tax obligations and advise what actions the customer should take next.</p>
 <table class="table_main" cellspacing="0">
-<tr><td><h4 class="ques">&darr; Select Answer</h4><td><h4 class="ans">&darr; Question prompts</h4></td></tr>
-<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
-<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
-<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
-<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
-<tr><td class='td_select_width'><button onClick='nextSteps()'>Next steps</button></td><td><span id='finalAnswer'></span></td></tr>
+	<tr><td><h4 class="ques">&darr; Select Answer</h4><td><h4 class="ans">&darr; Question prompts</h4></td></tr>
+	<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
+	<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
+	<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
+	<tr><td class='td_select_width format'><span class='A'></span></td><td class="format"><span class='Q'></span></td></tr>
+	<tr><td class='td_select_width'><button onClick='nextSteps()'>Next steps</button></td><td><span id='finalAnswer'></span></td></tr>
 </table>
 </div>
 <script>
